# validsdp

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  Makefile  Makefile.coq.local  Makefile.coq.local.in  Makefile.in  README  README.md  README.org  TODO.org  _CoqProject  _CoqProject.in  configure.ac  coq-libvalidsdp.opam  coq-validsdp.opam  default.nix  install_deps  install_sdpa_on_debian_10.sh  naming_convention.org
.github/workflows/: coq-action.yml  nix-action-9.0-2.3.0.yml  nix-action-9.0.yml  nix-action-9.1.yml
.nix/: config.nix  coq-nix-toolbox.nix
benchs/: README  benchs.tex  ckpt-hollight-multi-ineqs.bash  ckpt-hollight-multi.bash  logs2tex.sh  nl-certify.patch
benchs/flyspeck/: Makefile  descr  fs260.hl  fs260.ml  fs260.pvs  fs260.qepcad  fs260.sage  fs260.v  fs461.hl  fs461.ml  fs461.pvs  fs461.qepcad  fs461.sage  fs461.v  fs491.ml  fs491.pvs  fs491.qepcad  fs491.sage  fs491.v  fs745.hl  fs745.ml  fs745.pvs  fs745.qepcad  fs745.sage  fs745.v  fs752.hl  fs752.ml  fs752.pvs  fs752.qepcad  fs752.sage  fs752.v  fs8.hl  fs8.ml  fs8.pvs  fs8.qepcad  fs8.sage  fs8.v  fs859.hl  fs859.ml  fs859.pvs  (+63 more)
benchs/global/: Makefile  adaptativeLV.hl  adaptativeLV.ml  adaptativeLV.pvs  adaptativeLV.qepcad  adaptativeLV.sage  adaptativeLV.v  adaptative_lotka_voltera_system.ml  butcher.hl  butcher.ml  butcher.pvs  butcher.qepcad  butcher.sage  butcher.v  caprasse.hl  caprasse.ml  caprasse.pvs  caprasse.qepcad  caprasse.sage  caprasse.v  caprasse_system.ml  caprasse_system.pvs  descr  heart.hl  heart.ml  heart.pvs  heart.qepcad  heart.sage  heart.v  heart_dipole.ml  input.ineq  magnetism.hl  magnetism.ml  magnetism.pvs  magnetism.qepcad  magnetism.sage  magnetism.v  param.transc.nocoq  parse.mli  parser.mly  (+17 more)
benchs/prog_invs/: Makefile  descr  ex4_d10.ml  ex4_d10.sage  ex4_d10.v  ex4_d10_init.qepcad  ex4_d4.ml  ex4_d4.sage  ex4_d4.v  ex4_d4_init.qepcad  ex4_d6.ml  ex4_d6.sage  ex4_d6.v  ex4_d6_init.qepcad  ex4_d8.ml  ex4_d8.sage  ex4_d8.v  ex4_d8_init.qepcad  ex5_d10.ml  ex5_d10.sage  ex5_d10.v  ex5_d10_init.qepcad  ex5_d4.ml  ex5_d4.sage  ex5_d4.v  ex5_d4_ind0.qepcad  ex5_d4_init.qepcad  ex5_d6.ml  ex5_d6.sage  ex5_d6.v  ex5_d6_init.qepcad  ex5_d8.ml  ex5_d8.sage  ex5_d8.v  ex5_d8_init.qepcad  ex6_d4.ml  ex6_d4.sage  ex6_d4.v  ex6_d4_init.qepcad  ex6_d6.ml  (+41 more)
cholesky/: Coq_native8541d5.native  Makefile  README  Rstruct.v  TODO.org  _CoqProject  bigop_tactics.v  binary64.v  binary64_infnan.v  bounded.v  cholesky.v  cholesky_infnan.v  cholesky_prog.v  computation.v  coqgraph.ml  coqinterval_infnan.v  ellipsoid_error.v  ellipsoid_error_infnan.v  fcmdotprod.v  fdotprod.v  float_infnan_spec.v  flx64.v  fsum.v  gamma.v  iteri_ord.v  log  misc.v  multipoly.v  native_compute.v  real_matrix.v  seqmx.v  seqmx_complements.v  testsuite.v  validsdp.v
dependencies/: README  _CoqProject
dependencies/CoqEAL_refinements/: Makefile  binint.v  binnat.v  karatsuba.v  pivot.v  pos.v  rank.v  rational.v  refinements.v  seqmatrix.v  seqpoly.v  smith.v  smithpid.v  strassen.v
dependencies/CoqEAL_theory/: Makefile  binetcauchy.v  coherent.v  dvdring.v  edr.v  fpmod.v  hrel.v  kaplansky.v  minor.v  mxstructure.v  similar.v  ssrcomplements.v  stronglydiscrete.v
examples/: Makefile  _tags  ellipsoid_error.v  ellipsoid_error_infnan.v  fdotprod.v  lexer.mll  location.ml  location.mli  log4_d10  log4_d4  log4_d6  log4_d8  log5_d4  log5_d6  log5_d8  log6_d4  log6_d6  log7_d10  log7_d4  log7_d6  log7_d8  log8_d10  log8_d4  log8_d6  log8_d8  main.ml  parse.ml  parse.mli  parser.mly  report.ml  report.mli  times  utils.ml  utils.mli
libvalidsdp/: .coqdeps.d  FlocqNativeLayer.v  Makefile  Makefile.coq  Makefile.coq.conf  Makefile.coq.local  Makefile.in  README.md  Rstruct.v  _CoqProject  _CoqProject.in  binary64.v  binary64_infnan.v  binary_infnan.v  bounded.v  bsn_infnan.v  cholesky.v  cholesky_infnan.v  config.status  configure  configure.ac  coqinterval_infnan.v  coqinterval_infnan_31.v  coqinterval_infnan_63.v  fcmsum.v  float_infnan_spec.v  float_spec.v  flocq_float.v  flx64.v  fsum.v  fsum_l2r.v  misc.v  primitive_floats_infnan.v  real_matrix.v  zulp.v
libvalidsdp/autom4te.cache/: output.0  requests  traces.0  traces.1
plugins/selectineq/: .gitignore  Makefile  _CoqProject.in
plugins/selectineq/src/: selectineq_main.ml  selectineq_plugin.mlpack
plugins/selectineq/test-suite/: selectineqtac.v
plugins/selectineq/theories/: selectineq.v
plugins/soswitness/: Makefile  Makefile.in  README
plugins/soswitness/src/: META.coq-validsdp  soswitness.ml4  soswitness.mllib  soswitness_v810.ml4  soswitness_v810.mlg  soswitness_v811.mlg  soswitness_v812.mlg  soswitness_v813.mlg  soswitness_v814.mlg  soswitness_v815.mlg  soswitness_v816.mlg  soswitness_v818.mlg  soswitness_v820.mlg  soswitness_v85.ml4  soswitness_v86.ml4  soswitness_v87.ml4  soswitness_v88.ml4  soswitness_v89.ml4  soswitness_vmaster.mlg
plugins/soswitness/test-suite/: soswitnesstac.v  soswitnesstac_sdpa.v
plugins/soswitness/theories/: soswitness.v  soswitness_plugin.v  soswitness_plugin.v.in  soswitness_v810.v  soswitness_v89.v
test-module/soswitness/: Make  Makefile
test-module/soswitness/src/: soswitness.ml4
test-module/soswitness/test-suite/: soswitnesstac.v
test-module/soswitness/theories/: soswitness.v
test-suite/: matrices.v  test_validsdp.v  test_validsdp_intro.v  testsuite.v
theories/: CBigQ.v.in  CBigZ.v.in  FlocqEmulatedLayer.v  FlocqNativeLayer.v  FlocqSpecLayer.v  Flocq_complements.v  Makefile  Makefile.coq.local  Makefile.in  Rstruct.v  _CoqProject  _CoqProject.in  _CoqProject_v810.in  _CoqProject_v86.in  _CoqProject_v87.in  benchs.sh  bigop_tactics.v  binary64.v  binary64_infnan.v  binrat.v  bounded.v  cholesky.v  cholesky_infnan.v  cholesky_prog.v  computation.v  coqinterval_infnan.v  ellipsoid_error.v  ellipsoid_error_infnan.v  fcmdotprod.v  fcmsum.v  fdotprod.v  float_infnan_spec.v  float_spec.v  flx64.v  fsum.v  gamma.v  iteri_ord.v  matrices.v  misc.v  multipoly.v  (+16 more)
