opam-version: "1.2"
name: "coq-libvalidsdp"
version: "dev"
maintainer: [
  "Pierre Roux <pierre.roux@onera.fr>"
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
]

homepage: "https://sourcesup.renater.fr/validsdp/"
dev-repo: "https://github.com/validsdp/validsdp.git"
bug-reports: "https://github.com/validsdp/validsdp/issues"
license: "LGPL"

build: [
  ["sh" "-c" "cd libvalidsdp && ./autogen.sh && ./configure"]
  [make "-C" "libvalidsdp" "-j%{jobs}%"]
]
install: [make "-C" "libvalidsdp" "install"]
remove: ["rm" "-R" "%{lib}%/coq/user-contrib/libValidSDP"]
depends: [
  "coq" {>= "8.7" & < "8.9~"} "coq-interval" {>= "3" & < "4~"} "coq-mathcomp-field" {>= "1.7" & < "1.8~"} "ocamlfind" "camlp4" "coq-flocq" {= "dev"} "coq-bignums"
  "conf-autoconf" {build}
]
synopsis: "LibValidSDP"
description: """
LibValidSDP is a library for the Coq formal proof assistant. It provides
results mostly about rounding errors in the Cholesky decomposition algorithm
used in the ValidSDP library which itself implements Coq tactics to prove
multivariate inequalities using SDP solvers.

Once installed, the following modules can be imported :
From libValidSDP Require Import Rstruct.v misc.v real_matrix.v bounded.v float_spec.v fsum.v fcmsum.v binary64.v cholesky.v float_infnan_spec.v binary64_infnan.v cholesky_infnan.v flx64.v zulp.v coqinterval_infnan.v.
"""
          
tags: [
  "keyword:libValidSDP"
  "keyword:ValidSDP"
  "keyword:floating-point arithmetic"
  "keyword:Cholesky decomposition"
  "category:libValidSDP"
  "category:Miscellaneous/Coq Extensions"
  "logpath:libValidSDP"
]
authors: [
  "Pierre Roux <pierre.roux@onera.fr>"
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
]
#url: {
#  archive: "https://github.com/coq-community/paramcoq/releases/download/v1.1.1+coq8.9/coq-paramcoq.1.1.1+coq8.9.tgz"
#  checksum: "md5=TODO curl -L archive | md5sum"
#}
