opam-version: "2.0"
name: "coq-libvalidsdp"
version: "dev"
maintainer: [
  "Pierre Roux <pierre.roux@onera.fr>"
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
]

homepage: "https://sourcesup.renater.fr/validsdp/"
dev-repo: "git+https://github.com/validsdp/validsdp.git"
bug-reports: "https://github.com/validsdp/validsdp/issues"
license: "LGPL"

build: [
  ["sh" "-c" "cd libvalidsdp && ./autogen.sh && ./configure"]
  [make "-C" "libvalidsdp" "-j%{jobs}%"]
]
install: [make "-C" "libvalidsdp" "install"]
depends: [
  "ocaml"
  "coq" {>= "8.7" & < "8.10~"}
  "coq-interval" {>= "3" & < "4~"}
  "coq-mathcomp-field" {>= "1.7" & < "1.10~"}
  "ocamlfind"
  "camlp4"
  "coq-flocq" {>= "3.1.0"}
  "coq-bignums"
  "conf-autoconf" {build}
]
synopsis: "LibValidSDP"
description: """
LibValidSDP is a library for the Coq formal proof assistant. It provides
results mostly about rounding errors in the Cholesky decomposition algorithm
used in the ValidSDP library which itself implements Coq tactics to prove
multivariate inequalities using SDP solvers.

Once installed, the following modules can be imported :
From libValidSDP Require Import Rstruct.v misc.v real_matrix.v bounded.v float_spec.v fsum.v fcmsum.v binary64.v cholesky.v float_infnan_spec.v binary64_infnan.v cholesky_infnan.v flx64.v zulp.v coqinterval_infnan.v.
"""

tags: [
  "keyword:libValidSDP"
  "keyword:ValidSDP"
  "keyword:floating-point arithmetic"
  "keyword:Cholesky decomposition"
  "category:libValidSDP"
  "category:Miscellaneous/Coq Extensions"
  "logpath:libValidSDP"
]
authors: [
  "Pierre Roux <pierre.roux@onera.fr>"
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
]
#url: {
#  archive: "https://github.com/validsdp/validsdp/releases/download/v0.6/coq-libvalidsdp.0.6.tgz"
#  checksum: "sha256sum=TODO curl -L archive | sha256sum"
#}
