opam-version: "2.0"
version: "dev"
maintainer: [
  "Pierre Roux <pierre.roux@onera.fr>"
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
]

homepage: "https://sourcesup.renater.fr/validsdp/"
dev-repo: "git+https://github.com/validsdp/validsdp.git"
bug-reports: "https://github.com/validsdp/validsdp/issues"
license: "LGPL-2.1-or-later"

build: [
  ["sh" "-c" "cd libvalidsdp && ./autogen.sh"] {dev}
  ["sh" "-c" "cd libvalidsdp && ./configure"]
  [make "-C" "libvalidsdp" "-j%{jobs}%"]
]
install: [make "-C" "libvalidsdp" "install"]
depends: [
  "coq" {((>= "8.14" & < "8.17~") | (= "dev"))}
  "coq-bignums"
  "coq-flocq" {>= "3.3.0"}
  "coq-coquelicot" {>= "3.0"}
  "coq-interval" {>= "4.0.0" & < "5~"}
  "coq-mathcomp-field" {(>= "1.13" & < "1.16~") | (= "dev")}
  "coq-mathcomp-analysis" {>= "0.3.5" & < "0.5.4~"}
  "ocamlfind" {build}
  "conf-autoconf" {build & dev}
]
synopsis: "LibValidSDP"
description: """
LibValidSDP is a library for the Coq formal proof assistant. It provides
results mostly about rounding errors in the Cholesky decomposition algorithm
used in the ValidSDP library which itself implements Coq tactics to prove
multivariate inequalities using SDP solvers.

Once installed, the following modules can be imported :
From libValidSDP Require Import Rstruct.v misc.v real_matrix.v bounded.v float_spec.v fsum.v fcmsum.v binary64.v cholesky.v float_infnan_spec.v binary64_infnan.v cholesky_infnan.v flx64.v zulp.v coqinterval_infnan.v.
"""

tags: [
  "keyword:libValidSDP"
  "keyword:ValidSDP"
  "keyword:floating-point arithmetic"
  "keyword:Cholesky decomposition"
  "category:libValidSDP"
  "category:Miscellaneous/Coq Extensions"
  "logpath:libValidSDP"
]
authors: [
  "Pierre Roux <pierre.roux@onera.fr>"
  "Érik Martin-Dorel <erik.martin-dorel@irit.fr>"
]
#url {
#  src: "https://github.com/validsdp/validsdp/releases/download/v0.8.0/libvalidsdp-0.8.0.tar.gz
#  checksum: "sha256=TODO curl -L archive | sha256sum"
#}
